--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<html lang="en" data-bs-theme="auto">
-  <head><script src="../assets/js/color-modes.js"></script>
+<html lang="ru" data-bs-theme="auto">
+  <head><script src=".{{ url_for('static', filename='bootstrap/js/color-modes.js') }}"></script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,9 +13,9 @@
 
     
 
-    <link rel="stylesheet" href="./search.css">
+    <link rel="stylesheet" href=".{{ url_for('static', filename='app/css/search.css') }}">
 
-<link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href=".{{ url_for('static', filename='bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
@@ -98,7 +98,7 @@
 
     
     <!-- Custom styles for this template -->
-    <link href="offcanvas-navbar.css" rel="stylesheet">
+    <link href=".{{ url_for('static', filename='app/css/offcanvas-navbar.css') }}" rel="stylesheet">
   </head>
   <body class="bg-body-tertiary">
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
@@ -210,7 +210,7 @@
 
 <main class="container">
   <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm">
-    <img class="me-3" src="../assets/brand/bootstrap-logo-white.svg" alt="" width="48" height="38">
+    <img class="me-3" src=".{{ url_for('static', filename='bootstrap/brand/bootstrap-logo-white.svg') }}" alt="" width="48" height="38">
     <div class="lh-1">
       <h1 class="h6 mb-0 text-white lh-1">Bootstrap</h1>
       <small>Since 2011</small>
@@ -282,7 +282,7 @@
     </small>
   </div>
 </main>
-<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+<script src=".{{ url_for('static', filename='bootstrap/dist/js/bootstrap.bundle.min.js') }}"></script>
 
-    <script src="offcanvas-navbar.js"></script></body>
+    <script src=".{{ url_for('static', filename='app/js/offcanvas-navbar.js') }}"></script></body>
 </html>
