--- a/templates/index.html
+++ b/templates/index.html
@@ -191,24 +191,57 @@
     <div class="container text-center">
       <div class="row p-3">
         <div class="col">
+          <p class="h2">Исходный список компонентов</p>
           <div class="input-group">
-            <span class="input-group-text">Исходный список</span>
+            <!-- <span class="input-group-text">Исходный список</span> -->
             <textarea rows="15" class="form-control" aria-label="With textarea"></textarea>
           </div>
         </div>
         <div class="col">
-
-          <div class="row">
+          <p class="h2">Параметры</p>
+          <div class="row p-3">
             <div class="col-md-4">
               <label for="validationServer01" class="form-label">Кол. устройств, шт.</label>
               <input type="number" min="1" max="1000" step="1" value="1"class="form-control" id="validationServer01" value="Mark" required>
             </div>
           </div>
 
-          <div class="row">
+          <div class="row p-3">
             <div class="col-md-4">
               <label for="validationServer01" class="form-label">Технолог. запас, %</label>
               <input type="number" min="0" max="100" step="1" value="0"class="form-control" id="validationServer01" value="Mark" required>
+            </div>
+          </div>
+
+          
+          <div class="row p-3">
+            <p class="h4">Коррекция параметров резисторов</p>
+            
+
+            <div class="col-md-5">
+              
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="invalidCheck3" required>
+                <label class="form-check-label" for="invalidCheck3">
+                  Пропускать точность
+                </label>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="row p-3">
+            <p class="h4">Коррекция параметров конденсаторов</p>
+            
+
+            <div class="col-md-5">
+              
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="invalidCheck3" required>
+                <label class="form-check-label" for="invalidCheck3">
+                  Пропускать точность
+                </label>
+              </div>
             </div>
           </div>
 
