--- a/templates/index.html
+++ b/templates/index.html
@@ -188,7 +188,7 @@
 
   <div class="my-3 p-3 bg-body rounded shadow-sm">
 
-    <div class="container text-center">
+    <div class="container text-left">
       <div class="row p-3">
         <div class="col">
           <p class="h2">Исходный список компонентов</p>
@@ -227,6 +227,19 @@
                 </label>
               </div>
             </div>
+
+
+            <div class="col-md-5">
+              
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="invalidCheck3" required>
+                <label class="form-check-label" for="invalidCheck3">
+                  Пропускать мощность
+                </label>
+              </div>
+            </div>
+
+
           </div>
 
 
@@ -243,14 +256,48 @@
                 </label>
               </div>
             </div>
+
+
+            <div class="col-md-5">
+              
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="invalidCheck3" required>
+                <label class="form-check-label" for="invalidCheck3">
+                  Пропускать диэлектрик
+                </label>
+              </div>
+            </div>
+
+
+
+            
+            <div class="col-md-5">
+              
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="invalidCheck3" required>
+                <label class="form-check-label" for="invalidCheck3">
+                  Пропускать напряжение
+                </label>
+              </div>
+            </div>
+
           </div>
+
+
+
 
         </div>
       </div>
 
+
+
       <div class="row p-3">
-        <button type="button" class="btn btn-primary">Обработать</button>
+          <button type="button" class="btn btn-primary">Обработать</button>
+
       </div>
+
+
+
     </div>
 
 
@@ -258,6 +305,23 @@
   </div>
 
   <div class="my-3 p-3 bg-body rounded shadow-sm">
+
+    <p class="h2">Результаты</p>
+
+
+    <div class="row p-3">
+      <div class="col-md-4">
+        <button type="button" class="btn btn-primary">Отобразить скорр. список</button>
+      </div>
+
+      <div class="col-md-4">
+        <button type="button" class="btn btn-primary">Список для магазина Элитан</button>
+      </div>
+    </div>
+
+
+    <p class="h3">Таблица для заказа</p>
+
     <div class="bd-example-snippet bd-code-snippet"><div class="bd-example m-0 border-0">
       <table class="table table-striped">
         <thead>
@@ -266,12 +330,14 @@
           <th scope="col">Наименование</th>
           <th scope="col">Тип</th>
           <th scope="col">Параметры</th>
+          <th scope="col">Количество</th>
           <th scope="col">Ссылки</th>
         </tr>
         </thead>
         <tbody>
         <tr>
           <th scope="row">1</th>
+          <td>-</td>
           <td>-</td>
           <td>-</td>
           <td>-</td>
@@ -283,9 +349,11 @@
           <td>-</td>
           <td>-</td>
           <td>-</td>
+          <td>-</td>
         </tr>
         <tr>
           <th scope="row">3</th>
+          <td>-</td>
           <td>-</td>
           <td>-</td>
           <td>-</td>
