work with table

--- a/templates/index.html
+++ b/templates/index.html
@@ -335,8 +335,8 @@
           <th scope="col">Ссылки</th>
         </tr>
         </thead>
-        <tbody>
-        <tr>
+        <tbody id = "res_table_body">
+        <!-- <tr>
           <th scope="row">1</th>
           <td>-</td>
           <td>-</td>
@@ -359,7 +359,7 @@
           <td>-</td>
           <td>-</td>
           <td>-</td>
-        </tr>
+        </tr> -->
         </tbody>
       </table>
       </div></div>
