--- a/templates/index.html
+++ b/templates/index.html
@@ -312,11 +312,15 @@
 
     <div class="row p-3">
       <div class="col-md-4">
-        <button type="button" class="btn btn-primary">Отобразить скорр. список</button>
+        <button type="button" class="btn btn-primary">Список англ.</button>
       </div>
 
       <div class="col-md-4">
-        <button type="button" class="btn btn-primary">Список для магазина Элитан</button>
+        <button type="button" class="btn btn-primary">Список рус.</button>
+      </div>
+
+      <div class="col-md-4">
+        <button type="button" class="btn btn-primary">Список Элитан</button>
       </div>
     </div>
 
@@ -336,30 +340,7 @@
         </tr>
         </thead>
         <tbody id = "res_table_body">
-        <!-- <tr>
-          <th scope="row">1</th>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-        </tr> -->
+
         </tbody>
       </table>
       </div></div>
