--- a/templates/index.html
+++ b/templates/index.html
@@ -352,7 +352,7 @@
     <p class="h3">Таблица для заказа</p>
 
     <div class="bd-example-snippet bd-code-snippet"><div class="bd-example m-0 border-0">
-      <table class="table table-striped">
+      <table id = "res_table" class="table table-striped">
         <thead>
         <tr>
           <th scope="col">#</th>
@@ -361,6 +361,7 @@
           <th scope="col">Параметры</th>
           <th scope="col">Количество</th>
           <th scope="col">Ссылки</th>
+          <th scope="col" class="text-center">Статус</th>
         </tr>
         </thead>
         <tbody id = "res_table_body">
