--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,8 @@
     <meta name="generator" content="Hugo 0.118.2">
     <title>BOM Parser</title>
 
+    <link rel="icon" type="image/x-icon" href=".{{ url_for('static', filename='app/pictures/favicon.ico') }}">
+
     <!-- <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/offcanvas-navbar/"> -->
 
     <script src=".{{ url_for('static', filename='app/js/jquery-3.7.1.min.js') }}"></script>
