--- a/templates/index.html
+++ b/templates/index.html
@@ -311,9 +311,9 @@
   <div class="my-3 p-3 bg-body rounded shadow-sm">
 
     <p class="h2">Результаты</p>
+    <p></p>
 
-
-    <div class="row p-3">
+    <div class="row row-cols-3">
 
       <div class="col-md-2">
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="en">Список англ.</button>
@@ -325,7 +325,7 @@
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="elitan">Список Элитан</button>
       </div>
     </div>
-
+    <p></p>
 
       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -354,7 +354,7 @@
 
     <p class="h3">Таблица для заказа</p>
 
-    <div class="bd-example-snippet bd-code-snippet"><div class="bd-example m-0 border-0">
+    <div class="bd-example-snippet bd-code-snippet"><div class="bd-example m-0 border-0 table-responsive-md">
       <table id = "res_table" class="table table-striped">
         <thead>
         <tr>
