--- a/react/src/css/offcanvas.css
+++ b/react/src/css/offcanvas.css
@@ -19,7 +19,9 @@ body {
     overflow-y: auto;
     visibility: hidden;
     background-color: #343a40;
-    transition: transform .3s ease-in-out, visibility .3s ease-in-out;
+    transition:
+      transform 0.3s ease-in-out,
+      visibility 0.3s ease-in-out;
   }
   .offcanvas-collapse.open {
     visibility: visible;
@@ -27,24 +29,43 @@ body {
   }
 }
 
-.nav-scroller .nav {
-  color: rgba(255, 255, 255, .75);
+.nav-scroller {
+  position: relative;
+  z-index: 2;
+  height: 2.75rem;
+  overflow-y: hidden;
 }
 
-.nav-scroller .nav-link {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-  font-size: .875rem;
+.nav-scroller .nav {
+  display: flex;
+  flex-wrap: nowrap;
+  padding-bottom: 1rem;
+  margin-top: -1px;
+  overflow-x: auto;
+  color: rgba(255, 255, 255, 0.75);
+  text-align: center;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
+}
+
+.nav-underline .nav-link {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  font-size: 0.875rem;
   color: #6c757d;
 }
 
-.nav-scroller .nav-link:hover {
+.nav-underline .nav-link:hover {
   color: #007bff;
 }
 
-.nav-scroller .active {
+.nav-underline .active {
   font-weight: 500;
   color: #343a40;
+}
+
+.text-white-50 {
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .bg-purple {
