--- a/react/src/scss/styles.scss
+++ b/react/src/scss/styles.scss
@@ -34,7 +34,7 @@ $enable-shadows: true;
 
 // Customize some defaults
 $body-color: #333;
-$body-bg: #fff;
+$body-bg: #ffffff;
 $border-radius: 0.4rem;
 $success: #7952b3;
 
