--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!doctype html><html lang="ru"><head>
-    <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="description" content=""><meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors"><meta name="generator" content="Hugo 0.80.0"><title>Bootstrap w/ Webpack</title><link rel="icon" href=".{{ url_for('static', filename='favicon.ico') }}"><script defer="defer" src=".{{ url_for('static', filename='index.js') }}"></script><meta name="theme-color" content="#000000" /><link rel="manifest" href=".{{ url_for('static', filename='manifest.json') }}" />
+    <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="description" content=""><meta name="author" content="SergeyLadanov"><meta name="generator" content="Hugo 0.80.0"><title>BOM Parser</title><link rel="icon" href=".{{ url_for('static', filename='favicon.ico') }}"><script defer="defer" src=".{{ url_for('static', filename='index.js') }}"></script><meta name="theme-color" content="#000000" /><link rel="manifest" href=".{{ url_for('static', filename='manifest.json') }}" />
 </head>
 <body class="bg-body-tertiary">
     <div id="app"></div>
