Добавлено скачивание результатов в Excel

--- a/react/src/scss/styles.scss
+++ b/react/src/scss/styles.scss
@@ -36,7 +36,7 @@ $enable-shadows: true;
 $body-color: #333;
 $body-bg: #ffffff;
 $border-radius: 0.4rem;
-$success: #7952b3;
+// $success: #7952b3;
 
 // Required
 @import 'bootstrap/scss/variables';
