--- a/react/src/scss/styles.scss
+++ b/react/src/scss/styles.scss
@@ -91,7 +91,6 @@ $border-radius: 0.4rem;
 
 body {
   padding: 1.5rem;
-  width: 100vw;
 }
 
 // Color mode variables in _root.scss
@@ -125,4 +124,8 @@ body {
     align-items: center;
     z-index: 9999; /* Высокий приоритет, чтобы блокировать весь фон */
   }
+}
+
+html {
+  scrollbar-gutter: stable;
 }
